  type of the object.

- Issue #20619: Give the AST nodes of keyword-only arguments a column and line
  number.

- Issue #20526: Revert changes of issue #19466 which introduces a regression:
  don't clear anymore the state of Python threads early during the Python
  shutdown.

- Issue #20595: Make getargs.c C89 compliant.

Library
-------

- Issue #20320: select.select() and select.kqueue.control() now round the
  timeout aways from zero, instead of rounding towards zero.

- Issue #20616: Add a format() method to tracemalloc.Traceback.

- Issue #19744: the ensurepip installation step now just prints a warning to
  stderr rather than failing outright if SSL/TLS is unavailable. This allows
  local installation of POSIX builds without SSL/TLS support.

- Issue #6815: os.path.expandvars() now supports non-ASCII environment
  variables names and values.

- Issue #17671: Fixed a crash when use non-initialized io.BufferedRWPair.
  Based on patch by Stephen Tu.

- Issue #8478: Untokenizer.compat processes first token from iterator input.
  Patch based on lines from Georg Brandl, Eric Snow, and Gareth Rees.

- Issue #20594: Avoid name clash with the libc function posix_close.

- Issue #19856: shutil.move() failed to move a directory to other directory
  on Windows if source name ends with os.altsep.

- Issue #20673: Implement support for UNIX Domain Sockets in asyncio.
  New APIs: loop.create_unix_connection(), loop.create_unix_server(),
  streams.open_unix_connection(), and streams.start_unix_server().

Tests
-----

- Issue #20510: Rewrote test_exit in test_sys to match existing comments,
  use modern unittest features, and use helpers from test.script_helper
  instead of using subprocess directly.  Patch by Gareth Rees.

- Issue #20605: Make test_socket getaddrinfo OS X segfault test more robust.

Build
-----

- Issue #20609: Restored the ability to build 64-bit Windows binaries on
  32-bit Windows, which was broken by the change in issue #19788.

